[project]
name = "pythonmcp"
version = "0.1.0"
description = "MCP Server with everything, fetch, filesystem, memory, sequentialthinking, and websearch tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.1",
    "httpx>=0.27",
    "markdownify>=0.13.1",
    "readabilipy>=0.2.0",
    "protego>=0.3.1",
    "pydantic>=2.0.0",
    "starlette>=0.38.0",
    "uvicorn>=0.30.0",
    "duckduckgo-search>=6.0.0",
]

[project.scripts]
pythonmcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]